force-app/main/default/objects/Account_Plan__c/fields/Draft_Do_Not_Send_Summary__c.field-meta.xml
<CustomField>
    <fullName>Draft_Do_Not_Send_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you check this box, the summary email will not send. Once you have completed modifying this plan, uncheck this box and click Save. This will trigger the automatic summary message to the Primary Sales Rep.</inlineHelpText>
    <label>Draft - Do Not Send Summary</label>
    <type>Checkbox</type>
</CustomField>