force-app/main/default/objects/Account_Plan__c/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <inlineHelpText>Select the quarter that this plan represents.</inlineHelpText>
    <label>Fiscal Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1: Jan-Mar</fullName>
            </value>
            <value>
                <fullName>Q2: Apr-Jun</fullName>
            </value>
            <value>
                <fullName>Q3: Jul-Sept</fullName>
            </value>
            <value>
                <fullName>Q4: Oct-Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>