force-app/main/default/objects/Account_Plan__c/fields/FY_GP_Budget__c.field-meta.xml
<CustomField>
    <fullName>FY_GP_Budget__c</fullName>
    <label>Selling Margin $ Budget OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>