force-app/main/default/objects/Account_Plan__c/fields/FY_Sales_Budget__c.field-meta.xml
<CustomField>
    <fullName>FY_Sales_Budget__c</fullName>
    <inlineHelpText>Based on this account plan, this is the amount of sales expected for the year.</inlineHelpText>
    <label>Sales $ Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>