force-app/main/default/objects/Account_Plan__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <label>GP$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>