force-app/main/default/objects/Account_Plan__c/fields/GP_Growth_Decline_PCT__c.field-meta.xml
<CustomField>
    <fullName>GP_Growth_Decline_PCT__c</fullName>
    <formula>if(or( ISNULL(Previous_FY_GP__c  ), isnull( Current_FY_GP__c)),0, Previous_FY_GP__c  /  Current_FY_GP__c)</formula>
    <label>GP$ Growth Decline %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>