force-app/main/default/objects/Account_Plan__c/fields/GP_Increase_Decline_PCT__c.field-meta.xml
<CustomField>
    <fullName>GP_Increase_Decline_PCT__c</fullName>
    <formula>if(or( ISNULL(Current_FY_GP__c ), ISNULL( FY_GP_Budget__c)),0, Current_FY_GP__c / FY_GP_Budget__c)</formula>
    <label>GP$ Increase / Decline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>