force-app/main/default/objects/Account_Plan__c/fields/Greatest_Growth_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Growth_Opportunities__c</fullName>
    <label>Greatest Growth Opportunities</label>
    <type>TextArea</type>
</CustomField>