force-app/main/default/objects/Account_Plan__c/fields/Growth_Actions__c.field-meta.xml
<CustomField>
    <fullName>Growth_Actions__c</fullName>
    <label>Growth Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Increase_sales_growth__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Evaluate product offering</fullName>
            </value>
            <value>
                <fullName>Refine resource approach</fullName>
            </value>
            <value>
                <fullName>Review new products and capabilities</fullName>
            </value>
            <value>
                <fullName>Understand customers goals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>