force-app/main/default/objects/Account_Plan__c/fields/Growth_Comments__c.field-meta.xml
<CustomField>
    <fullName>Growth_Comments__c</fullName>
    <label>Growth Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>