force-app/main/default/objects/Account_Plan__c/fields/Growth_Decline_PCT__c.field-meta.xml
<CustomField>
    <fullName>Growth_Decline_PCT__c</fullName>
    <formula>if(or( ISNULL(Previous_FY_Sales__c  ), isnull( Current_FY_Slaes__c)),0, Previous_FY_Sales__c /  Current_FY_Slaes__c)</formula>
    <label>Sales Growth Decline %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>