force-app/main/default/objects/Account_Plan__c/fields/Improve_AR_percent_Past_due__c.field-meta.xml
<CustomField>
    <fullName>Improve_AR_percent_Past_due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve AR % Past Due</label>
    <type>Checkbox</type>
</CustomField>