force-app/main/default/objects/Account_Plan__c/fields/Improve_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Improve_pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve Pipeline</label>
    <type>Checkbox</type>
</CustomField>