force-app/main/default/objects/Account_Plan__c/fields/Improve_pricing__c.field-meta.xml
<CustomField>
    <fullName>Improve_pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve Pricing</label>
    <type>Checkbox</type>
</CustomField>