force-app/main/default/objects/Account_Plan__c/fields/Improve_Supply_Chain_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Improve_Supply_Chain_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve Supply Chain Metrics</label>
    <type>Checkbox</type>
</CustomField>