force-app/main/default/objects/Account_Plan__c/fields/Increase__c.field-meta.xml
<CustomField>
    <fullName>Increase__c</fullName>
    <label>Increase / Decrease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>