force-app/main/default/objects/Account_Plan__c/fields/Increase_sales_growth__c.field-meta.xml
<CustomField>
    <fullName>Increase_sales_growth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Increase Sales Growth</label>
    <type>Checkbox</type>
</CustomField>