force-app/main/default/objects/Account_Plan__c/fields/Increase_share_percent__c.field-meta.xml
<CustomField>
    <fullName>Increase_share_percent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Increase Share Percent</label>
    <type>Checkbox</type>
</CustomField>