force-app/main/default/objects/Account_Plan__c/fields/Kitting__c.field-meta.xml
<CustomField>
    <fullName>Kitting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitting</label>
    <type>Checkbox</type>
</CustomField>