force-app/main/default/objects/Account_Plan__c/fields/Large_Unprofitable_Order_Account__c.field-meta.xml
<CustomField>
    <fullName>Large_Unprofitable_Order_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in the US to denote Large Unprofitable Order Accounts.</inlineHelpText>
    <label>Large Unprofitable Order Account</label>
    <type>Checkbox</type>
</CustomField>