force-app/main/default/objects/Account_Plan__c/fields/Master_Srv_Agreement_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Srv_Agreement_Expiration_Date__c</fullName>
    <label>Master Srv Agreement Expiration Date</label>
    <type>Date</type>
</CustomField>