force-app/main/default/objects/Account_Plan__c/fields/Metric_Annualized_CAS_s_CP__c.field-meta.xml
<CustomField>
    <fullName>Metric_Annualized_CAS_s_CP__c</fullName>
    <inlineHelpText>Defined as 4 * Current Period MECP CAS</inlineHelpText>
    <label>Metric: Annualized CAS $s CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>