force-app/main/default/objects/Account_Plan__c/fields/Metric_AR_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Metric_AR_Past_Due__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: &gt;25%, Med: 7%-25%, Low: &lt;7%
Report: AR Report</inlineHelpText>
    <label>Metric: AR% Past Due CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>