force-app/main/default/objects/Account_Plan__c/fields/Metric_MECP_CAS__c.field-meta.xml
<CustomField>
    <fullName>Metric_MECP_CAS__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: 12%,  Med: 7% (covers fixed warehouse &amp; corporate costs, yields profit), Low: 3% (covers fixed warehouse and contributes to corporate costs)
Report: Customer P&amp;L drill down to product</inlineHelpText>
    <label>Metric: CAS % of Sales CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>