force-app/main/default/objects/Account_Plan__c/fields/Metric_Migration_Rate__c.field-meta.xml
<CustomField>
    <fullName>Metric_Migration_Rate__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: &gt;30%, Med: 10%-30%, Low: &lt;10%
Reports: Customer Business Review, Account Migration Report</inlineHelpText>
    <label>Metric: Sales Migration % CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>