force-app/main/default/objects/Account_Plan__c/fields/Metric_New_Product_Growth__c.field-meta.xml
<CustomField>
    <fullName>Metric_New_Product_Growth__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: &gt;10%, Med: 5%-10%, Low: &lt;5%
Report: Customer Business Review</inlineHelpText>
    <label>Metric: Product Growth CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>