force-app/main/default/objects/Account_Plan__c/fields/Metric_Pipeline_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Metric_Pipeline_of_Sales__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: &gt;30%, Med: 15%-30%, Low: &lt;15%
Reports: Pipeline Reports, BM/AVP Dashboards</inlineHelpText>
    <label>Metric: Pipeline % of Sales CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>