force-app/main/default/objects/Account_Plan__c/fields/Metric_Pricing_of_Target__c.field-meta.xml
<CustomField>
    <fullName>Metric_Pricing_of_Target__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: &gt;100%, Med: 95%-99%, Low: &lt;95%
Report: Margin Scorecard</inlineHelpText>
    <label>Metric: Pricing %  CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>