force-app/main/default/objects/Account_Plan__c/fields/Metric_Share_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Metric_Share_of_Sales__c</fullName>
    <inlineHelpText>Enter this value from the Sales Scorecard
High: &gt;95%, Med: 70%-95%, Low: &lt;70%
Report: Customer Business Review</inlineHelpText>
    <label>Metric: Share % of Sales CP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>