force-app/main/default/objects/Account_Plan__c/fields/Next_Quarter_GP__c.field-meta.xml
<CustomField>
    <fullName>Next_Quarter_GP__c</fullName>
    <label>Next Quarter GP$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>