force-app/main/default/objects/Account_Plan__c/fields/On_Site_Employee__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-Site Employee</label>
    <type>Checkbox</type>
</CustomField>