force-app/main/default/objects/Account_Plan__c/fields/Other_Account_Performance_Actions__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Performance_Actions__c</fullName>
    <label>Other Account Performance Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Additional_Actions__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Improve inventory carry costs</fullName>
            </value>
            <value>
                <fullName>Channel shift (Warehouse – Direct)</fullName>
            </value>
            <value>
                <fullName>Sales Salary Reduction</fullName>
            </value>
            <value>
                <fullName>Commission dial down</fullName>
            </value>
            <value>
                <fullName>Sales Expense reduction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>