force-app/main/default/objects/Account_Plan__c/fields/Other_Actions_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Actions_Comments__c</fullName>
    <label>Other Actions Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>