force-app/main/default/objects/Account_Plan__c/fields/Percent_of_Business_Captured__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Business_Captured__c</fullName>
    <label>Percent of Business Captured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>