force-app/main/default/objects/Account_Plan__c/fields/Pipeline_Actions__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Actions__c</fullName>
    <label>Pipeline Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Improve_pipeline__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Establish new projects</fullName>
            </value>
            <value>
                <fullName>Establish or refine sales team</fullName>
            </value>
            <value>
                <fullName>Obtain new leads</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>