force-app/main/default/objects/Account_Plan__c/fields/Pipeline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Comments__c</fullName>
    <label>Pipeline Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>