force-app/main/default/objects/Account_Plan__c/fields/Planned_Customer_Business_Reviews_YR__c.field-meta.xml
<CustomField>
    <fullName>Planned_Customer_Business_Reviews_YR__c</fullName>
    <label>Planned - Customer Business Reviews / YR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>