force-app/main/default/objects/Account_Plan__c/fields/Planned_FS_Spec_Visits_Yr__c.field-meta.xml
<CustomField>
    <fullName>Planned_FS_Spec_Visits_Yr__c</fullName>
    <label>Planned - FS Spec Visits/Yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>