force-app/main/default/objects/Account_Plan__c/fields/Planned_SM_Visits_Year__c.field-meta.xml
<CustomField>
    <fullName>Planned_SM_Visits_Year__c</fullName>
    <label>Planned - SM Visits / Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>