force-app/main/default/objects/Account_Plan__c/fields/Planned_Summary_Visits__c.field-meta.xml
<CustomField>
    <fullName>Planned_Summary_Visits__c</fullName>
    <formula>Planned_Corr_Spec_Visits_Yr__c + Planned_Food_Spec_Visits_Yr__c + Planned_FS_Equip_Spec_Visits_Yr__c + Planned_FS_Spec_Visits_Yr__c + Planned_Pkg_Equip_Spec_Visits_Yr__c + Planned_Pkg_Spec_Visits_Yr__c + Planned_Retail_Spec_Visits_Yr__c + Planned_Load_Spec_Visits_Yr__c+  Planned_Customer_Business_Reviews_YR__c +  Planned_Program_Manager_Visits_Year__c  +  Planned_Other_Leader_Visits_Year__c  + Planned_RSL_Visits_Year__c + Planned_Sales_Leader_Visits_Year__c + Planned_SM_Visits_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Planned Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>