force-app/main/default/objects/Account_Plan__c/fields/Previous_Action_Plan_Comments_Next_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Previous_Action_Plan_Comments_Next_Qtr__c</fullName>
    <label>Previous Action Plan Comments</label>
    <type>TextArea</type>
</CustomField>