force-app/main/default/objects/Account_Plan__c/fields/Previous_FY_GP__c.field-meta.xml
<CustomField>
    <fullName>Previous_FY_GP__c</fullName>
    <label>Previous FY GP$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>