force-app/main/default/objects/Account_Plan__c/fields/Previous_Quarter_Results__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quarter_Results__c</fullName>
    <label>Previous Quarter Results</label>
    <type>TextArea</type>
</CustomField>