force-app/main/default/objects/Account_Plan__c/fields/Previous_Quarter_Sales__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quarter_Sales__c</fullName>
    <label>Previous Quarter Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>