force-app/main/default/objects/Account_Plan__c/fields/Previous_Quarter_to_Plan__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quarter_to_Plan__c</fullName>
    <label>Previous Quarter % to Plan</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>