force-app/main/default/objects/Account_Plan__c/fields/Price_Comments__c.field-meta.xml
<CustomField>
    <fullName>Price_Comments__c</fullName>
    <label>Price Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>