force-app/main/default/objects/Account_Plan__c/fields/Pricing_Actions__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Actions__c</fullName>
    <label>Pricing Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Improve_pricing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Raise pricing</fullName>
            </value>
            <value>
                <fullName>Get best cost</fullName>
            </value>
            <value>
                <fullName>Sell alternative product</fullName>
            </value>
            <value>
                <fullName>Training on target pricing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>