force-app/main/default/objects/Account_Plan__c/fields/Primary_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Email__c</fullName>
    <label>Primary Sales Rep Email</label>
    <type>Email</type>
</CustomField>