force-app/main/default/objects/Account_Plan__c/fields/Primary_Sales_Rep_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Email_Formula__c</fullName>
    <formula>Primary_Sales_Rep__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sales Rep Email Formula</label>
    <type>Text</type>
</CustomField>