force-app/main/default/objects/Account_Plan__c/fields/Product_Service_Knowledge_Score__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Knowledge_Score__c</fullName>
    <description>Project PR-00709</description>
    <inlineHelpText>I have all the product and service knowledge I need</inlineHelpText>
    <label>Product &amp; Service Knowledge Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>