force-app/main/default/objects/Account_Plan__c/fields/Reduce_churn__c.field-meta.xml
<CustomField>
    <fullName>Reduce_churn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce Migration (Churn)</label>
    <type>Checkbox</type>
</CustomField>