force-app/main/default/objects/Account_Plan__c/fields/Relationship_with_Purchasing_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Purchasing_Score__c</fullName>
    <description>Project PR-00709</description>
    <inlineHelpText>I have a working relationship with purchasing contacts at this customer</inlineHelpText>
    <label>Relationship with Purchasing Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>