force-app/main/default/objects/Account_Plan__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>Sales</label>
    <length>100</length>
    <type>Text</type>
</CustomField>