force-app/main/default/objects/Account_Plan__c/fields/Sales_Approach__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approach__c</fullName>
    <label>Customer Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supplier-Consultative</fullName>
            </value>
            <value>
                <fullName>Value Added-Partner Enterprise</fullName>
            </value>
            <value>
                <fullName>Vendor-Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>