force-app/main/default/objects/Account_Plan__c/fields/Sales_Increase_Decrease_PCT__c.field-meta.xml
<CustomField>
    <fullName>Sales_Increase_Decrease_PCT__c</fullName>
    <formula>if(or( ISNULL(Current_FY_Slaes__c ), isnull( FY_Sales_Budget__c)),0, Current_FY_Slaes__c / FY_Sales_Budget__c)</formula>
    <label>Sales Increase/Decrease %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>