force-app/main/default/objects/Account_Plan__c/fields/Segment_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Segment_Training_Completed__c</fullName>
    <description>Project PR-00709</description>
    <inlineHelpText>I have completed all training provided for this segment</inlineHelpText>
    <label>Segment Training Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>