force-app/main/default/objects/Account_Plan__c/fields/Selling_Margin_Budget__c.field-meta.xml
<CustomField>
    <fullName>Selling_Margin_Budget__c</fullName>
    <formula>FY_Sales_Budget__c *  Selling_Margin_PCT_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equals the Sales $ Budget x Selling Margin % Budget.</inlineHelpText>
    <label>Selling Margin $ Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>