force-app/main/default/objects/Account_Plan__c/fields/Selling_Margin_Budget_PCT_OLD__c.field-meta.xml
<CustomField>
    <fullName>Selling_Margin_Budget_PCT_OLD__c</fullName>
    <formula>FY_GP_Budget__c  /   FY_Sales_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Margin % Budget OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>