force-app/main/default/objects/Account_Plan__c/fields/Selling_Margin_PCT_Budget__c.field-meta.xml
<CustomField>
    <fullName>Selling_Margin_PCT_Budget__c</fullName>
    <inlineHelpText>Enter the Selling Margin percent of the Sales budget.  Do not enter any decimals - the Selling Margin % Budget field will calculate this number as a percentage.</inlineHelpText>
    <label>Selling Margin % Budget</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>