force-app/main/default/objects/Account_Plan__c/fields/Share_Actions__c.field-meta.xml
<CustomField>
    <fullName>Share_Actions__c</fullName>
    <label>Share Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Increase_share_percent__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Evaluate product offering</fullName>
            </value>
            <value>
                <fullName>Refine resource approach</fullName>
            </value>
            <value>
                <fullName>Review new products and capabilities</fullName>
            </value>
            <value>
                <fullName>Review customers goals</fullName>
            </value>
            <value>
                <fullName>Evaluate cross-selling opportunities</fullName>
            </value>
            <value>
                <fullName>Confirm right mix of customer contacts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>