force-app/main/default/objects/Account_Plan__c/fields/Share_Comments__c.field-meta.xml
<CustomField>
    <fullName>Share_Comments__c</fullName>
    <label>Share Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>